Reset exercises for property based testing